--- a/dashboard.css
+++ b/dashboard.css
@@ -7,7 +7,7 @@
   body {
     font-family: Arial, sans-serif;
     background: #f7f7f7;
-    background: url(image/hero-img.jpg);
+    background: url(image/hero-img.jpg) no-repeat center center/cover;
   }
 
   /* Navbar */
