--- a/login.css
+++ b/login.css
@@ -213,7 +213,7 @@ nav ul li a:hover::after {
 }
 
 .login-card {
-  background: rgba(37, 127, 230, 0.269);
+  background: rgba(206, 223, 241, 0.576);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-radius: 10px;
@@ -224,7 +224,7 @@ nav ul li a:hover::after {
 .login-card h2 {
   text-align: center;
   margin-bottom: 25px;
-  color: #003b95;
+  color: #00183c;
 }
 
 .form-group {
