--- a/dashboard.css
+++ b/dashboard.css
@@ -193,7 +193,7 @@
     }
   
     nav ul li a{
-      font-size: 18px;
+      font-size: 1.3rem;
       border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     }
   
