--- a/login.css
+++ b/login.css
@@ -197,7 +197,7 @@ nav ul li a:hover::after {
   }
 
   nav ul li a{
-    font-size: 18px;
+    font-size: 1.3rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   }
 
