--- a/login.css
+++ b/login.css
@@ -131,8 +131,8 @@ nav ul li a:hover::after {
 .dropdown-menu {
   display: none;
   position: absolute;
-  top: 30px;
-  right: 0;
+  top: 40px;
+  right: -100px;
   background: white;
   color: #333;
   list-style: none;
